don't wrap metadata too much if issue title is extremely long

--- a/source/features/clean-pinned-issues.css
+++ b/source/features/clean-pinned-issues.css
@@ -57,6 +57,7 @@ html:not([rgh-OFF-clean-pinned-issues]) {
 			align-items: center; /* Fix comments alignment when metadata takes multiple lines */
 			text-align: end;
 			margin-left: 8px;
+			flex-shrink: 0.5;
 		}
 	}
 }
